# YDBSodium

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile-rocky  README.md
ci/: needs_copyright.sh
src/: _ydbsodiumtest.m  run_mem_test.sh.in  sodium.xc.in  sodium_plugin.c
